Update logic moved from controllers to services